<resources>
    <string name="app_name">signUp</string>
    <string name="signin">로그인</string>
    <string name="signout">로그아웃</string>
    <string name="signup">회원가입</string>
    <string name="email">이메일</string>
    <string name="input_email">이메일 입력</string>
    <string name="password">비밀번호</string>
    <string name="input_password">비밀번호 입력</string>
    <string name="main_login_btn">Login</string>
    <string name="main_join_btn">SignUp</string>
</resources>
